--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                 </div>
               </div>
             </div>
-            <form action="mailto:masterbranding007@gmail.com" method="post" enctype="text/plain" class="contact-form">
+            <form action="mailto:masterbranding007@gmail.com?subject=newmessage" method="post" enctype="text/plain" class="contact-form">
               <div class="row">
                 <div class="col-md-6">
                   <input type="text" name="name" id="name" placeholder="Name" required />
