--- a/index.html
+++ b/index.html
@@ -277,13 +277,11 @@
               </nav>
               <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-who" role="tabpanel" aria-labelledby="nav-who-tab">
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                    when
-                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters, look like readable English.</p>
-                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have in some
-                    form,
-                    by injected humour.</p>
+                  <p>We are MASTER and we have two wings called MASTER ADS & MASTER BRANDING, 
+                    We are a digital agency that helps brands to achieve their business outcomes. 
+                    We see technology as a tool to create amazing things.
+                    The main things we focus is on Outdoor Publicity and Online Marketing Through our Creative Designing Ideas.</p>
+                 
                 </div>
                 <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
                   <p>It is a long established fact that a reader will be distracted by the readable content of a page
