--- a/index.html
+++ b/index.html
@@ -284,13 +284,12 @@
                  
                 </div>
                 <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                    when
-                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters, look like readable English.</p>
-                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have in some
-                    form,
-                    by injected humour.</p>
+                  <p>Our vision is to provide top-level inspiration and guidance for the design team and serves several purposes, 
+                    including: To support the broader business group or company mission vision and strategy. To inspire.
+                    We only thinks about the most crative way to represent your firm or your ideas.
+                   Our vision is to provide strategies which can help to glow your business into the public. 
+                  </p>
+          
                 </div>
                 <div class="tab-pane fade" id="nav-history" role="tabpanel" aria-labelledby="nav-history-tab">
                   <p>It is a long established fact that a reader will be distracted by the readable content of a page
