--- a/index.html
+++ b/index.html
@@ -286,9 +286,10 @@
                 <div class="tab-pane fade" id="nav-vision" role="tabpanel" aria-labelledby="nav-vision-tab">
                   <p>Our vision is to provide top-level inspiration and guidance for the design team and serves several purposes, 
                     including: To support the broader business group or company mission vision and strategy. To inspire.
-                    We only thinks about the most crative way to represent your firm or your ideas.
-                   Our vision is to provide strategies which can help to glow your business into the public. 
+                    We only thinks about the most crative way to represent your firm or your ideas. 
                   </p>
+
+                   <p>Our vision is to provide strategies which can help to glow your business into the public.</p> 
           
                 </div>
                 <div class="tab-pane fade" id="nav-history" role="tabpanel" aria-labelledby="nav-history-tab">
