--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     We only thinks about the most crative way to represent your firm or your ideas. 
                   </p>
 
-                   <p>Our vision is to provide strategies which can help to glow your business into the public.</p> 
+                   <p>Our vision is to provide strategies which can help to glow your business into the public like never before.</p> 
           
                 </div>
                 <div class="tab-pane fade" id="nav-history" role="tabpanel" aria-labelledby="nav-history-tab">
