--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
           <!-- Single News -->
           <div class="single-news">
             <div class="image">
-              <a href="javascript:void(0)"><img class="thumb" src="assets/images/blog/greentech S M post.png" alt="Blog" /></a>
+              <a href="javascript:void(0)"><img class="thumb" src="assets/images/blog/mockup1.png" alt="Blog" /></a>
               <div class="meta-details">
                 <!-- <img class="thumb" src="assets/images/blog/b6.jpg" alt="Author" /> -->
                 <span>FOR GREENTECH</span>
