--- a/index.html
+++ b/index.html
@@ -640,13 +640,13 @@
               <a href="javascript:void(0)"><img class="thumb" src="assets/images/blog/mockup1.png" alt="Blog" /></a>
               <div class="meta-details">
                 <!-- <img class="thumb" src="assets/images/blog/b6.jpg" alt="Author" /> -->
-                <span>FOR GREENTECH</span>
+                <span>FOR VISITING CARDS</span>
               </div>
             </div>
             <div class="content-body">
               <h4 class="title">
                 <a href="javascript:void(0)">
-                 SRI RAMAKRISHNA GREENTECH SOLUTIONS
+                 VISITING CARD MOCKUP
                 </a>
               </h4>
               <!-- <p>
@@ -662,7 +662,7 @@
           <!-- Single News -->
           <div class="single-news">
             <div class="image">
-              <a href="javascript:void(0)"><img class="thumb" src="assets/images/blog/trinadha jewellery S M Post.png" alt="Blog" /></a>
+              <a href="javascript:void(0)"><img class="thumb" src="assets/images/blog/trinadha jewellery S M Post.jpg" alt="Blog" /></a>
               <div class="meta-details">
                 <!-- <img class="thumb" src="assets/images/blog/b6.jpg" alt="Author" /> -->
                 <span>FOR TRINADHA</span>
