--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
           
                 </div>
                 <div class="tab-pane fade" id="nav-history" role="tabpanel" aria-labelledby="nav-history-tab">
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                    when
-                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters, look like readable English.</p>
-                  <p>There are many variations of passages of Lorem Ipsum available, but the majority have in some
-                    form,
-                    by injected humour.</p>
+                  <p>Master Ads is a root for MASTER COMPANY, we've established Master Ads in 2000, 
+                    since then we gained so much experience regarding advertising and in choosing 
+                    right theme for right firms, so you can definitely entrust to us related to your 
+                    company complete branding, our most best service is outdoor publicity and recently 
+                    we've entered into digital publicity named as Master Branding, so now we are 
+                    giving our best creative thoughts and ideas to get most attractive output! 
+                    If you come this far in reading our history, you won't regret for choosing us :)</p>
                 </div>
               </div>
             </div>
